<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="splash_logo_desc">Splash Logo</string>
    <string name="welcome_message">Welcome to IOU App</string>
    <string name="app_name">I Owe You</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="money_transfer_desc">Money Transfer Illustration</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="add_contact">Add Contact</string>
    <string name="join_group">Join Group</string>
    <string name="create_group">Create Group</string>
    <string name="search_contact_group">Search contact or group</string>
    <string name="money_transfer_image">Illustration of money transfer</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back!</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Log In</string>
    <string name="sign_up_prompt">Don’t Have An Account? <u>Sign Up</u></string>
    <string name="bg_desc">Background illustration</string>
    <string name="back_arrow_desc">Back Arrow</string>
    <string name="logo_desc">Splash Logo</string>
    <string name="lets_get">Lets Get</string>
    <string name="started">Started</string>
    <string name="create">Create An</string>
    <string name="acc">Account!</string>
    <string name="accessibility_create">Create account title</string>
    <string name="accessibility_account">Account subtitle</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="group">Group ID</string>
    <string name="group_name">Group Name</string>
    <string name="options">options</string>
    <string name="add_payment">Add Payment</string>
    <string name="card_bg">card bg</string>
    <string name="user_display">%1$s (%2$s)</string>
    <string name="group_id_label">ID: %1$s</string>
    <string name="group_id_format">ID: %1$s</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_reset_email">Send Reset Email</string>
    <string name="contact_number">Contact number</string>
    <string name="user_detail">User Detail</string>
    <string name="contact_name">Contact name</string>

</resources>
