<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6C2CDE">

    <!-- Back Arrow -->

    <!-- App Logo -->

    <!-- App Name -->

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="425dp"
        android:layout_height="74dp"
        android:contentDescription="@string/card_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/card_background"
        tools:ignore="VisualLintBounds" />

    <!-- Menu (3 dots) -->


    <!-- Money Transfer Image -->

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="76dp"
        android:layout_height="68dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/logo_no_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="71dp"
        android:layout_height="62dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back_arrow_desc"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="133dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="108dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Add Payment Button -->

    <TextView
        android:id="@+id/text_group_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="80dp"
        android:text="@string/group"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:padding="12dp"
        android:text="@string/add_payment"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="63dp"
        android:layout_height="56dp"
        android:layout_marginStart="344dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/option"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
