<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".LoginActivity">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/bg_image"
        android:layout_width="411dp"
        android:layout_height="428dp"
        android:alpha="0.2"
        android:contentDescription="@string/bg_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/money_transfer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358" />

    <!-- Welcome Text -->

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="297dp"
        android:layout_height="184dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,VisualLintOverlap" />

    <!-- Email Field -->
    <TextView
        android:id="@+id/tv_back"
        android:layout_width="202dp"
        android:layout_height="158dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="148dp"
        android:text="@string/back"
        android:textColor="@android:color/holo_purple"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="358dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="306dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email_address"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="362dp"
        android:layout_height="58dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="378dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Forgot Password -->
    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

    <!-- Remember Me -->
    <CheckBox
        android:id="@+id/cb_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/remember_me"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purple_primary"
        android:padding="12dp"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:onClick="loginUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_remember_me"
        app:layout_constraintHorizontal_bias="0.428" />

    <!-- Sign Up Prompt -->
    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up_prompt"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:onClick="openSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintHorizontal_bias="0.497" />

    <!-- Back Arrow -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="goBackToMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow"
        tools:ignore="ContentDescription,ImageContrastCheck"
        android:contentDescription="@string/back_arrow_desc"/>


</androidx.constraintlayout.widget.ConstraintLayout>
