<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".SignUpActivity">

    <!-- Background image -->
    <ImageView
        android:id="@+id/bg_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.2"
        android:contentDescription="@string/bg_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/money_transfer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <!-- Back button -->
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="63dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back_arrow"
        android:onClick="goBackToMain"
        android:contentDescription="@string/back_arrow_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Create Text -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:layout_marginTop="93dp"
        android:layout_marginStart="68dp"
        android:fontFamily="@font/raleway_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Account Text -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acc"
        android:textColor="@color/purple_primary"
        android:textSize="34sp"
        android:layout_marginTop="128dp"
        android:layout_marginStart="68dp"
        android:fontFamily="@font/raleway_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Username -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/username"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="358dp"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email_address"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="359dp"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Contact Number -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contactInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/contact_number"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_contact"
            android:layout_width="358dp"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/contactInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="357dp"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="358dp"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/button2"
        android:layout_width="154dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purple_primary"
        android:onClick="registerUser"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordInput" />

</androidx.constraintlayout.widget.ConstraintLayout>
